Updated html and Css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav>
         <ul>
 
-        
+        <li><h2>Sneakers</h2></li>
         <li>Collections
         <li>Men
         <li>Women
@@ -75,7 +75,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Kabeer</a>.
   </div>
 </body>
 </html>
