updated html and css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
               0
             </div>
             <div class="cart_button">
+              <img src="./images/icon-cart.svg" alt="cart image">
               <a href="#" alt="cart button">Add to cart</a>
             </div>
           
